modified portfolio.html and css style page

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                     Jiyoon Kim
                 </div>
 
-                <div class= "col-8">
+                <div class= "col-10 border">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                         <a class="nav-link active" href="index.html">About</a>
@@ -39,29 +39,31 @@
 
     <div class= "container">
         <div class="row">
-            <div class= "col-6">
+            <div class= "col-12 border">
                 <h3>Portfolio</h3>
-
-            <div class="row">
-                <div class="col-6">
-                    <div class="row">
-                        <div class="col-6">
-                            <img src="..." alt="..." class="img-thumbnail">
+ 
+            <div class="row d-flex justify-content-center">
+                
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-5">
+                            <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
                             <a href="#">Word Games</a>
                         </div>
-                        <div class="col-6">
-                            <img src="..." alt="..." class="img-thumbnail">
+                        <div class="col-5">
+                            <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
                             <a href="#">RPG Game</a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <img src="..." alt="..." class="img-thumbnail">
+                        <div class="col-5">
+                            <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
                             <a href="#">Trivia Game</a>
                         </div>
-                        <div class="col-6">
-                            <img src="..." alt="..." class="img-thumbnail">
-                            <a href="#">Info Widget</a>
+                        <div class="col-5 d-flex align-items-end" style="background-image: url(https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg);
+                        background-size: contain; padding: 0;">
+                            
+                            <div id="portfolio_footer">
+                                <a href="#">Info Widget</a>
+
+                            </div>
                         </div>
                     </div>
 
