--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                     Jiyoon Kim
                 </div>
 
-                <div class= "col-8">
+                <div class= "col-10 border">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                         <a class="nav-link active" href="index.html">About</a>
@@ -39,7 +39,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 border">
                 <h3>Contact</h3>
                 <form>
                     <div class="form-group">
