adjusted thumbnail layout of portfolio page and changed font family

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Source+Sans+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
@@ -44,24 +48,24 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-5">
                         <img src="assets/touristee.jpg" alt="touristee app landing page" class="img-thumbnail">
+                        <div id="portfolio_footer">
                         <a href="https://kishaprudente.github.io/touristee/">touristee</a>
+                        </div>
                     </div>
                     <div class="col-5">
                         <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
-                        <a href="#">RPG Game</a>
-                    </div>
-                        <!-- <div class="col-5">
-                            <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
-                            <a href="#">Trivia Game</a>
-                        </div> -->
-                    <div class="col-5 d-flex align-items-end" style="background-image: url(https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg);
-                        background-size: contain; padding: 0;">
                         <div id="portfolio_footer">
-                            <a href="#">Trivia Game</a>
+                            <a href="#">RPG Game</a>
                         </div>
                     </div>
-                    <div class="col-5 d-flex align-items-end" style="background-image: url(https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg);
-                        background-size: contain; padding: 0;">
+                    <div class="col-5">
+                        <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
+                        <div id="portfolio_footer">
+                        <a href="#">Trivia Game</a>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail"> 
                         <div id="portfolio_footer">
                             <a href="#">Info Widget</a>
                         </div>
