added profile image and adjusted layout

--- a/index.html
+++ b/index.html
@@ -41,14 +41,18 @@
         <div class="row">
             <div class= "col-12 border">
                 <h3>About Me</h3>
-                        <img src="..." alt="..." class="img-thumbnail">
-    
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nam, est minima vel mollitia veritatis molestias nobis eligendi ut! Error laborum placeat, ducimus velit ipsa cupiditate beatae obcaecati nihil deserunt.
-                            <br><br>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nam, est minima vel mollitia veritatis molestias nobis eligendi ut! Error laborum placeat, ducimus velit ipsa cupiditate beatae obcaecati nihil deserunt.
-                        </p>
-
+                    <div class= "row">
+                        <div class= "col-3">
+                            <img src="assets/IMG_8361.JPG" alt="photo of me on NY ferry" class="img-thumbnail">
+                        </div>
+                        <div class=" col-9 float-right">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nam, est minima vel mollitia veritatis molestias nobis eligendi ut! Error laborum placeat, ducimus velit ipsa cupiditate beatae obcaecati nihil deserunt.
+                                <br><br>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nam, est minima vel mollitia veritatis molestias nobis eligendi ut! Error laborum placeat, ducimus velit ipsa cupiditate beatae obcaecati nihil deserunt.
+                            </p>
+                        </div>
+                    </div>
             </div>
         </div>
     
