formatted code for easier reading, added semantic tags nav, main, and footer, and created a footer

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                     Jiyoon Kim
                 </div>
 
-                <div class= "col-10 border">
+                <nav class= "col-10 border">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                         <a class="nav-link active" href="index.html">About</a>
@@ -29,15 +29,13 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                       </ul>
+                </nav>
 
-                </div>
-
-            </div>
-            
+            </div> 
         </div>
     </header>
 
-    <div class="container">
+    <main class="container">
         <div class="row">
             <div class="col-12 border">
                 <h3>Contact</h3>
@@ -58,12 +56,10 @@
                   </form>
             </div>
         </div>
-    </div>
-
-
-
-
-
+    </main>
+<footer class="container border">
+    Made with ♥ by Jiyoon
+</footer>
 
 </body>
 </html>
