--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     Jiyoon Kim
                 </div>
 
-                <div class= "col-10 border">
+                <nav class= "col-10 border">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                         <a class="nav-link active" href="index.html">About</a>
@@ -28,16 +28,14 @@
                         <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                         </li>
-                      </ul>
+                    </ul>
+                </nav>
 
-                </div>
-
-            </div>
-            
+            </div>  
         </div>
     </header>
 
-    <div class= "container">
+    <main class= "container">
         <div class="row">
             <div class= "col-12 border">
                 <h3>About Me</h3>
@@ -56,10 +54,11 @@
             </div>
         </div>
     
-    </div>
+    </main>
 
-
-
+    <footer class="container border">
+        Made with ♥ by Jiyoon
+    </footer>
 
 </body>
 </html>
