--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                     Jiyoon Kim
                 </div>
 
-                <div class= "col-10 border">
+                <nav class= "col-10 border">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                         <a class="nav-link active" href="index.html">About</a>
@@ -34,14 +34,14 @@
                         </li>
                       </ul>
 
-                </div>
+                </nav>
 
             </div>
             
         </div>
     </header>
 
-    <div class= "container">
+    <main class= "container">
         <div class="row">
             <div class= "col-12 border">
                 <h3>Portfolio</h3>
@@ -74,11 +74,10 @@
             </div>
         </div>
     
-    </div>
-
-
-
-
+    </main>
+<footer class="container border">
+    Made with ♥ by Jiyoon
+</footer>
 
 </body>
 </html>
