added images and links to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,83 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Source+Sans+Pro:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Source+Sans+Pro:wght@400;600&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
 
 <body>
-    <header>
-        <div class= "container">
-            <div class= "row">
-                <div class= "col-2">
-                    Jiyoon Kim
-                </div>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-2">
+					Jiyoon Kim
+				</div>
 
-                <nav class= "col-10 border">
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                      </ul>
+				<nav class="col-10 border">
+					<ul class="nav justify-content-end">
+						<li class="nav-item">
+							<a class="nav-link active" href="index.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="portfolio.html">Portfolio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
 
-                </nav>
+				</nav>
 
-            </div>
-            
-        </div>
-    </header>
+			</div>
 
-    <main class= "container">
-        <div class="row">
-            <div class= "col-12 border">
-                <h3>Portfolio</h3>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-5">
-                        <img src="assets/touristee.jpg" alt="touristee app landing page" class="img-thumbnail">
-                        <div id="portfolio_footer">
-                        <a href="https://kishaprudente.github.io/touristee/">touristee</a>
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
-                        <div id="portfolio_footer">
-                            <a href="#">RPG Game</a>
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
-                        <div id="portfolio_footer">
-                        <a href="#">Trivia Game</a>
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail"> 
-                        <div id="portfolio_footer">
-                            <a href="#">Info Widget</a>
-                        </div>
-                    </div> 
-                </div>
-            </div>
-        </div>
-    
-    </main>
-<footer class="container border">
-    Made with ♥ by Jiyoon
-</footer>
+		</div>
+	</header>
+
+	<main class="container">
+		<div class="row">
+			<div class="col-12 border">
+				<h3>Portfolio</h3>
+				<div class="row d-flex justify-content-center">
+					<div class="col-5">
+						<img src="assets/touristee.jpg" alt="touristee app landing page" class="img-thumbnail">
+						<div id="portfolio_footer">
+							<a href="https://kishaprudente.github.io/touristee/">touristee</a>
+						</div>
+					</div>
+					<div class="col-5">
+						<img src="assets/fitness-tracker.png" alt="fitness tracker homepage" class="img-thumbnail">
+						<div id="portfolio_footer">
+							<a href="https://fitness-tracker-v1.herokuapp.com/">Fitness Tracker</a>
+						</div>
+					</div>
+					<div class="col-5">
+						<img src="assets/food-diary.png" alt="my food diary upload page" class="img-thumbnail">
+						<div id="portfolio_footer">
+							<a href="https://food-diaries.herokuapp.com/">My Food Diary</a>
+						</div>
+					</div>
+					<div class="col-5">
+						<img src="https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg" alt="..." class="img-thumbnail">
+						<div id="portfolio_footer">
+							<a href="#">Info Widget</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</main>
+	<footer class="container border">
+		Made with ♥ by Jiyoon
+	</footer>
 
 </body>
+
 </html>
